# experimental-late-bound-defaults

./: README.md  pyproject.toml  setup.py  tox.ini
experimental_late_bound_defaults/: __init__.py  _importlib_style.py
tests/: codec_in_action.py  conftest.py  test_codec.py  test_experimental_late_bound_defaults.py  test_late_binding.py  test_late_binding_funcs.py  test_source.py
