[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "experimental_late_bound_defaults"
description = "A way to test PEP 671 in python."
requires-python = ">=3.11"
version = "2024.03.29"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" },
]
classifiers = ["Development Status :: 1 - Planning"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["experimental_late_bound_defaults"]

[tool.ruff]
include = ["experimental_late_bound_defaults/*"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PD",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "S101", # Use of assert here is a known quantity. Blame typing memes.
    # "PLR2004", # Magic value comparison. May remove later.
    "SIM105", # Suppressable exception. contextlib.suppress is a stylistic choice with overhead.
    "C90",    # McCabe complexity memes.
    # "PD011",  # Erroneous issue that triggers for any .values attribute access at all.
    "ANN101", # Type of self is usually implicit.
    "ANN102", # Type of cls is usually implicit.
    "ANN204", # Special method return types are usually implicit or known by type checker.
    "ANN401", # Need Any for some cases.
    "PLR",    # Complexity things.
    "A002",   # A little built-in shadowing.
    "ERA001", # Ignore commented code for now.
    # Allow messages in exception class calls.
    "TRY003",
    "EM101",
    # Recommended by Ruff when using Ruff format.
    "E111",
    "E114",
    "E117",
    "Q003",
    "COM812",
    "COM819",
    # "E501",
    "ISC001",
    "ISC002",
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.*" = [
    "T201", # Printing is fine.
    "ANN",  # Don't need many type annotations.
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
include = ["experimental_late_bound_defaults"]
ignore = ["tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

reportPrivateUsage = "none"
reportUnusedFunction = "none"
reportMissingTypeStubs = "warning"
reportImportCycles = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
